manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-demo
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
